--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 affine==2.4.0
-asttokens==2.4.1
 attrs==23.2.0
 blinker==1.7.0
-bqplot==0.12.42
 branca==0.7.1
 cachetools==5.3.2
 certifi==2024.2.2
@@ -10,30 +8,22 @@ charset-normalizer==3.3.2
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
-colour==0.1.5
-comm==0.2.1
 contourpy==1.2.0
 cycler==0.12.1
 dash==2.15.0
+dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-decorator==5.1.1
-earthengine-api==0.1.389
-eerepr==0.0.4
-exceptiongroup==1.2.0
-executing==2.0.1
+earthengine-api==0.1.390
 fiona==1.9.5
 Flask==3.0.2
 folium==0.15.1
-fonttools==4.48.1
-future==0.18.3
-geemap==0.30.4
-geocoder==1.38.1
+fonttools==4.49.0
 geopandas==0.14.3
-google-api-core==2.17.0
-google-api-python-client==2.117.0
-google-auth==2.27.0
+google-api-core==2.17.1
+google-api-python-client==2.118.0
+google-auth==2.28.0
 google-auth-httplib2==0.2.0
 google-cloud-core==2.4.1
 google-cloud-storage==2.14.0
@@ -44,61 +34,40 @@ httplib2==0.22.0
 idna==3.6
 importlib-metadata==7.0.1
 importlib-resources==6.1.1
-ipyevents==2.0.2
-ipyfilechooser==0.6.0
-ipyleaflet==0.18.2
-ipython==8.18.1
-ipytree==0.2.2
-ipywidgets==8.1.2
 itsdangerous==2.1.2
-jedi==0.19.1
 Jinja2==3.1.3
-jupyterlab_widgets==3.0.10
+joblib==1.3.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
-matplotlib==3.8.2
-matplotlib-inline==0.1.6
+matplotlib==3.8.3
 nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==23.2
 pandas==2.2.0
-parso==0.8.3
-pexpect==4.9.0
 pillow==10.2.0
-plotly==5.18.0
-prompt-toolkit==3.0.43
-protobuf==4.25.2
-ptyprocess==0.7.0
-pure-eval==0.2.2
+plotly==5.19.0
+protobuf==4.25.3
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
-Pygments==2.17.2
 pyparsing==3.1.1
-pyperclip==1.8.2
 pyproj==3.6.1
-pyshp==2.3.1
-python-box==7.1.1
 python-dateutil==2.8.2
 pytz==2024.1
 rasterio==1.3.9
-ratelim==0.1.6
 requests==2.31.0
 retrying==1.3.4
 rsa==4.9
-scooby==0.9.2
-shapely==2.0.2
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+shapely==2.0.3
 six==1.16.0
 snuggs==1.4.7
-stack-data==0.6.3
 tenacity==8.2.3
-traitlets==5.14.1
-traittypes==0.2.1
+threadpoolctl==3.3.0
 typing_extensions==4.9.0
 tzdata==2024.1
 uritemplate==4.1.1
-urllib3==2.2.0
-wcwidth==0.2.13
+urllib3==2.2.1
 Werkzeug==3.0.1
-widgetsnbextension==4.0.10
 xyzservices==2023.10.1
 zipp==3.17.0
